--- a/setup/animais/templates/index.html
+++ b/setup/animais/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <a class="navbar"> Busca Animal</a>
     <form>
-        <input type="text" id="buscar-animal" placeholder="Exemplo: leão">
+        <input type="text" id="buscar-animal" placeholder="Exemplo: leão" name="buscar">
         <button type="submit">Pesquisar</button>
     </form>
     <div class="result-description"></div>
